--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -171,9 +171,9 @@ SET(LIB_NAME pyheamd_${HOST_NAME})
 
 # Generate Python module header
 #MESSAGE(${CMAKE_BINARY_DIR})
-SET(FG_PYTHON_HEADER_NAME "${CMAKE_BINARY_DIR}/PythonModuleHeader_${HOST_NAME}.h")
-ADD_DEFINITIONS(-DFG_PYTHON_HEADER_NAME="${FG_PYTHON_HEADER_NAME}")
-CONFIGURE_FILE("cmake/PythonModuleHeader.h" "${FG_PYTHON_HEADER_NAME}")
+SET(HM_PYTHON_HEADER_NAME "${CMAKE_BINARY_DIR}/PythonModuleHeader_${HOST_NAME}.h")
+ADD_DEFINITIONS(-DHM_PYTHON_HEADER_NAME="${HM_PYTHON_HEADER_NAME}")
+CONFIGURE_FILE("cmake/PythonModuleHeader.h" "${HM_PYTHON_HEADER_NAME}")
 
 # Add the executable
 ADD_EXECUTABLE(${EXE_NAME} ${SOURCES})
