--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ SET(CMAKE_CXX_STANDARD 11)
 
 SET(PYTHON_VERSION_MAJOR 3)
 SET(PYTHON_VERSION_MINOR 6)
+SET(CL_VERSION_1_0 1)
 
 OPTION(RELEASE_BUILD "Relase build" ON)
 OPTION(DEBUG_INFO_BUILD "Enable debug info on release build" OFF)
@@ -82,6 +83,11 @@ INCLUDE_DIRECTORIES(${INCLUDE_DIRECTORIES} ${PNG_INCLUDE_DIR})
 # Find ZLIB library
 FIND_PACKAGE(ZLIB REQUIRED)
 INCLUDE_DIRECTORIES(${INCLUDE_DIRECTORIES} ${ZLIB_INCLUDE_DIR})
+
+# Find OpenCL
+#find_package(OpenCL REQUIRED)
+#INCLUDE_DIRECTORIES(${INCLUDE_DIRECTORIES} ${OpenCL_INCLUDE_DIRS})
+#LINK_DIRECTORIES(${LINK_DIRECTORIES} ${OpenCL_LIBRARY})
 
 # Find OpenMP
 IF(USE_OPENMP)
@@ -156,7 +162,7 @@ ENDIF()
 
 SET(SOURCES src/heamd.cpp)
 
-SET(LIBS ${Boost_LIBRARIES} ${PNG_LIBRARY} ${ZLIB_LIBRARY} ${FFTWF_LIB} ${FFTWD_LIB} ${FFTWL_LIB} ${LAPACK_LIBRARIES} ${PYTHON_LIBRARIES} ${ITK_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+SET(LIBS ${Boost_LIBRARIES} ${PNG_LIBRARY} ${ZLIB_LIBRARY} ${FFTWF_LIB} ${FFTWD_LIB} ${FFTWL_LIB} ${LAPACK_LIBRARIES} ${PYTHON_LIBRARIES} ${ITK_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${OpenCL_LIBRARY})
 SET(PROJECT_BINARY_DIR ${CMAKE_SOURCE_DIR}/bin)
 
 SITE_NAME(HOST_NAME)
